# arbitrage-altyn-bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  task.md
deploy/: arbitrage-altyn-bot.service
src/arbitrage_bot/: __init__.py  amounts.py  application.py  calculations.py  config.py  constants.py  domain.py  errors.py  formatting.py  handlers.py  keyboards.py  rates.py  repository.py  scheduler.py  texts.py
tests/: test_amounts.py  test_application.py  test_calculations.py  test_config.py  test_domain.py  test_formatting.py  test_handlers.py  test_keyboards.py  test_rates.py  test_repository.py  test_scheduler.py
