[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-altyn-bot"
version = "0.1.0"
description = "Telegram bot that monitors the Altyn/Rapira USDT-RUB spread"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram==3.29.1",
    "aiohttp==3.14.1",
    "aiosqlite==0.22.1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "mypy==2.2.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.21",
]

[project.scripts]
arbitrage-altyn-bot = "arbitrage_bot.application:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["arbitrage_bot"]
mypy_path = "src"
